# biyeti_api

./: .env.sample  .gitignore  .pylintrc  Procfile  README.md  biyeti-firebase-admin.json  manage.py  pyproject.toml  requirements.txt  requiremts.txt
Utils/: auth_utils.py  email.utils.py  email_utils.py  helpers.py  imageUploader.py  oauth.py  pagination.py  sms.py
Utils/decorators/: confirm_pwd.py
apps/: Router.py
apps/agents/: models.py  serializers.py  urls.py  views.py
apps/agents/migrations/: 0001_initial.py  0002_auto_20220325_0838.py  0003_alter_agent_unique_together.py
apps/events/: apps.py  models.py  serializers.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py  0002_alter_category_cover.py
apps/notifications/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
apps/notifications/migrations/: 0001_initial.py  0002_notification_created_at.py
apps/payments/: models.py  serializers.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_auto_20220705_1011.py  0003_auto_20220705_1243.py  0004_alter_payment_canal.py  0005_payment_paid.py  0006_alter_payment_unique_together.py  (+1 more)
apps/tickets/: admin.py  apps.py  models.py  serialzers.py  urls.py  views.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/wallets/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
bookitvenv/: pip-selfcheck.json  pyvenv.cfg
bookitvenv/Scripts/: Activate.ps1  activate  activate.bat  django-admin.py
globals/: asgi.py  config.py  settings.py  urls.py  wsgi.py
(+26 files in other folders)
