[tool.poetry]
name = "bookit_api"
version = "0.1.0"
description = ""
authors = ["Jacob Dev <mercihabam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.3"
python-decouple = "3.6"
wheel = "^0.37.1"
asgiref = "3.4.1"
astroid = "2.11.5"
cachetools = "4.2.4"
certifi = "2021.10.8"
charset-normalizer = "2.0.7"
cloudinary = "1.29.0"
colorama = "0.4.4"
dill = "0.3.5.1"
dj-database-url = "0.5.0"
Django = "3.2.9"
django-cors-headers = "3.10.1"
django-environ = "0.8.1"
django-heroku = "0.3.1"
djangorestframework = "3.12.4"
facebook-sdk = "3.1.0"
google-api-core = "2.2.2"
google-api-python-client = "2.30.0"
google-auth = "2.3.3"
google-auth-httplib2 = "0.1.0"
googleapis-common-protos = "1.53.0"
gunicorn = "20.1.0"
httplib2 = "0.20.2"
idna = "3.3"
isort = "5.10.1"
lazy-object-proxy = "1.7.1"
logparser = "0.8.2"
mccabe = "0.7.0"
messagebird = "2.0.0"
pexpect = "4.8.0"
Pillow = "9.0.1"
platformdirs = "2.5.2"
protobuf = "3.19.1"
ptyprocess = "0.7.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
PyJWT = "2.3.0"
pylint = "2.13.9"
pyparsing = "3.0.5"
python-dateutil = "2.8.2"
pytz = "2021.3"
requests = "2.26.0"
rsa = "4.7.2"
six = "1.16.0"
sqlparse = "0.4.2"
tomli = "2.0.1"
typed-ast = "1.5.4"
typing-extensions = "3.10.0.2"
uritemplate = "4.1.1"
urllib3 = "1.26.7"
whitenoise = "6.0.0"
wrapt = "1.14.1"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
